[package]
name = "reddit-cli"
version = "0.1.1"
edition = "2024"
description = "A command-line Reddit client with security hardening"
license = "MIT"
repository = "https://github.com/alceal/reddit-cli"
keywords = ["reddit", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "3"
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zeroize = "1"
